# ironmarch

./: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: assets.rs  board.rs  game.rs  gui.rs  lib.rs
crates/macros/src/: lib.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: agents.rs  aspects.rs  entities.rs  entity.rs  init.rs  lib.rs  names.rs  object.rs  simulation.rs  sites.rs  spawn.rs  tick.rs  view.rs
crates/spatial/: Cargo.toml
crates/spatial/src/: geom.rs  graph2d.rs  lib.rs
crates/util/: Cargo.toml
crates/util/src/: arena.rs  enum_map.rs  hierarchy.rs  lib.rs  misc.rs  one_to_one_map.rs  tagged.rs  tally.rs
src/: main.rs
