[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { workspace = true }
float-ord = { workspace = true }
num_enum = { workspace = true }
pathfinding = { workspace = true }
rand = { workspace = true }
slotmap = { workspace = true }
strum = { workspace = true }

util = { workspace = true }
